# teminal-panel

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-04-07-plan-1-foundation.md  2026-04-08-add-project-native-folder-picker.md  2026-04-08-plan-2-termwiz-rendering.md  2026-04-08-ui-crate-extraction.md  2026-04-08-wezterm-integration.md  2026-04-15-project-row-git-menu.md  2026-04-18-git-window-phase1.md  2026-04-18-git-window-phase2.md  2026-04-19-git-compare-editor.md
docs/superpowers/specs/: 2026-04-07-terminal-panel-design.md  2026-04-08-add-project-native-folder-picker-design.md  2026-04-08-plan-2-termwiz-rendering-design.md  2026-04-08-ui-crate-extraction-design.md  2026-04-08-wezterm-integration-design.md  2026-04-18-git-window-design.md  2026-04-18-git-window-phase2-design.md  2026-04-19-git-compare-editor-design.md  git-window-ui-prototype.html
src/: app.rs  config.rs  main.rs
src/agent/: mod.rs  panel.rs
src/project/: mod.rs  panel.rs
src/terminal/: mod.rs  model.rs  pty.rs  render.rs
teminal-panel/: Cargo.toml  README.md
teminal-panel/src/: app.rs  app_test.rs  config.rs  config_test.rs  lib.rs  main.rs  ssh.rs
teminal-panel/src/git_window/: detail.rs  git_data.rs  graph.rs  mod.rs  theme.rs
teminal-panel/src/project/: mod.rs  panel.rs
teminal-panel/src/terminal/: mod.rs  model.rs  pty.rs  render.rs  subscription.rs
teminal-panel/src/view/: mod.rs  overlay.rs  project_panel.rs  terminal.rs
ui/: Cargo.toml  README.md
ui/src/: lib.rs  theme.rs
ui/src/components/: button.rs  context_menu.rs  mod.rs  text_input.rs  truncated_tooltip_text.rs
ui/src/containers/: container.rs  mod.rs  modal.rs
