[package]
name = "teminal-panel"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "advanced", "canvas"] }
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
once_cell = "1"
termwiz = "0.23.3"
rfd = "0.17.2"
