[package]
name = "teminal-panel"
version.workspace = true
edition.workspace = true

[dependencies]
teminal-ui = { path = "../ui" }
iced = { version = "0.14", features = ["tokio", "advanced", "canvas"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
rfd = "0.17.2"
iced_term = { git = "https://github.com/Harzu/iced_term", branch = "master" }