[package]
name = "teminal-panel"
version.workspace = true
edition.workspace = true

[dependencies]
teminal-ui = { path = "../ui" }
iced = { version = "0.14", features = ["tokio", "advanced", "canvas"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
rfd = "0.17.2"
iced_fonts = { version = "0.3", features = ["bootstrap"] }
iced_term = { git = "https://github.com/benenen/iced_term", branch = "teminal-panel" }
git2 = "0.19"
